Sprint 11: pack management — statuses, conflict detection, dependencies
- PackManager: per-zip PackStatus (LOADED/REJECTED/CONFLICT), boss-conflict
  detection with first-pack-wins policy, duplicate packId handling
- metadata.dependencies (schema + validator): unsatisfied deps reported as warnings
- EncounterEngine delegates scanning to PackManager, exposes statuses +
  summary lines; conflicts/warnings logged on every reload
- DebugOverlay context-lines section shows live pack statuses
- tests 115/115 green (+7 PackManagerTest)